# So101-Motion-Planning

./: .gitignore  README.md
src/my_so101_robot_bringup_package/: CMakeLists.txt  package.xml
src/my_so101_robot_bringup_package/config/: my_so101_robot_controllers.yaml
src/my_so101_robot_bringup_package/launch/: my_so101_robot.launch.py
src/my_so101_robot_control_package/: CMakeLists.txt  package.xml  so101_robot_control.xml
src/my_so101_robot_control_package/include/my_so101_robot_control_package/: my_so101_robot_hardware.hpp
src/my_so101_robot_control_package/src/: my_so101_robot_hardware.cpp
src/my_so101_robot_description_package/: CMakeLists.txt  package.xml
src/my_so101_robot_description_package/rviz/: my_so101_robot.rviz
src/my_so101_robot_description_package/urdf/: initial_positions.yaml  my_so101_robot.urdf.xacro  so101_robot.urdf
src/my_so101_robot_description_package/urdf/my_so101_robot/: my_so101_robot_macro.ros2_control.xacro  my_so101_robot_macro.xacro
src/my_so101_robot_hardware_package/: CMakeLists.txt  package.xml
src/my_so101_robot_hardware_package/include/my_so101_robot_hardware_package/: FeetechMotorsBus.hpp  errors.hpp  group_sync_read.hpp  group_sync_write.hpp  motors_bus.hpp  packet_handler.hpp  port_handler.hpp  protocol_packet_handler.hpp  scservo_def.hpp  scservo_sdk.hpp  so101.hpp  so101_ros2_calib.hpp  so101_ros2_pub.hpp  so101_ros2_sub.hpp  tables.hpp
src/my_so101_robot_hardware_package/src/: FeetechMotorsBus.cpp  group_sync_read.cpp  group_sync_write.cpp  motors_bus.cpp  packet_handler.cpp  port_handler.cpp  protocol_packet_handler.cpp  scservo_sdk.cpp  so101.cpp  so101_ros2_calib.cpp  so101_ros2_pub.cpp  so101_ros2_sub.cpp  tables.cpp
src/my_so101_robot_hardware_package/src/.cache/: so101_follower.json
src/my_so101_robot_moveit_package/: .setup_assistant  CMakeLists.txt  package.xml
src/my_so101_robot_moveit_package/config/: initial_positions.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  so101.ros2_control.xacro  so101.srdf  so101.urdf.xacro
src/my_so101_robot_moveit_package/launch/: demo.launch.py  move_group.launch.py  moveit_real.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
