<?xml version="1.0"?>
<?xml-model href="https://download.ros.org/schema/package_format3.xsd" schematypens="https://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so101_robot_description</name>
  <version>0.0.0</version>
  <description>Package ROS2 description for so101 robot called so101_robot_description</description>
  <maintainer email="valerio1.grossi@gmail.com">valerio</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  
  <exec_depend>rviz2</exec_depend>

  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export> 
</package>
